[gd_scene load_steps=5 format=2]

[ext_resource path="res://images/laneswitch-logo.png" type="Texture" id=1]
[ext_resource path="res://fonts/Kenney Blocks.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Nodes/MainMenu/MainMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 100, 30 )
texture = ExtResource( 1 )
centered = false

[node name="PlayButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 200.0
margin_right = 357.0
margin_bottom = 252.0
custom_fonts/font = SubResource( 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsButton" type="Button" parent="."]
margin_left = 213.188
margin_top = 287.676
margin_right = 408.188
margin_bottom = 339.676
custom_fonts/font = SubResource( 1 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
margin_left = 213.188
margin_top = 378.056
margin_right = 385.188
margin_bottom = 430.056
custom_fonts/font = SubResource( 1 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 470.812
margin_right = 359.0
margin_bottom = 522.812
custom_fonts/font = SubResource( 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="PlayButton" to="." method="_on_PlayButton_button_up"]
[connection signal="button_up" from="SettingsButton" to="." method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="CreditsButton" to="." method="_on_CreditsButton_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_QuitButton_button_up"]
